# CSerializer

./: CMakeLists.txt  readme.md  run.py
include/: CSerializer.h
src/: CSerializer.c
test/: CMakeLists.txt  foo.json  test_foo_serializer.c
